2008-05-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (make_tics):  Don't generate tics for an empty axis range.

	* term/pbm.trm (PBM_options):  Make the tic size independent of the
	font size.
	Bug #1969415

2008-05-29  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/hidden3d.c (sort_polys_by_z in_front coord_to_treecell):
	Add range-checks to the calculation of quadtree array indices.
	Bugs #1969415 #1728063

2008-05-27  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wtext.c (TextInit), src/win/wgraph.c (GraphInit):
	Increase buffer sizes which contain the path to wgnuplot.ini.  Fixes
	crashes on systems with very long paths of the %APPDATA% directory.

2008-05-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (need_fill_border): LT_UNDEFINED really means
	"use default color"

	* src/graphics.c (do_key_sample): Do not draw errorbars on candlestick
	key sample

2008-05-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (check_for_variable_color):  Consolidate all the checks
	for deriving color from a data column into a single subroutine.

	* src/plot2d.c (eval_plots) docs/gnuplot.doc:  Do not prevent the user
	from requesting palette colors for a 2D plot.  Reading a palette color
	value from an additional data column works fine for any plot style that
	isn't already using the full set of column assignments (candlesticks,
	boxxyerror).

2008-05-25  Hans-Bernhard Broeker <broeker@physik.rwth-aachen.de>

	* term/emf.trm (EMF_options): Option 'size' broke out of parsing
	loop prematurely.

2008-05-23  Philipp K. Janert <janert@ieee.org>

	* demo/all.dem demo/smooth.dem demo/dgrid3d.dem demo/random-points
	demo/gnu-valley: added demos for the new dgrid3d kernels and for 
	the "smooth cumulative"	smoothing algo.	

2008-05-22  Thomas Sefzick  <thse@users.sourceforge.net>

	* src/bitmap.c (b_vector): If either end of a vector would fall outside
	the canvas area, don't draw it.  This prevents segfaults and memory